@@ -2,48 +2,33 @@ package com.capstone.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.config.Customizer;
-import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.filter.CorsFilter;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 public class CorsConfig {
 
-  @Bean
-  public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-    http
-      .csrf(csrf -> csrf.disable())
-      .cors(Customizer.withDefaults())
-      .authorizeHttpRequests(reg -> reg
-          .requestMatchers("/api/**").permitAll()
-          .anyRequest().permitAll()
-      );
-    return http.build();
-  }
+    @Bean
+    public CorsFilter corsFilter() {
+        CorsConfiguration config = new CorsConfiguration();
 
-  @Bean
-  public CorsConfigurationSource corsConfigurationSource() {
-    CorsConfiguration cfg = new CorsConfiguration();
+        // Use patterns so subdomains work and CloudFront/Amplify are covered
+        config.setAllowedOriginPatterns(Arrays.asList(
+            "https://*.amplifyapp.com",
+            "https://*.cloudfront.net",
+            "http://localhost:*"
+        ));
 
-    // Allow Amplify app, your CloudFront distro, and local dev
-    cfg.setAllowedOriginPatterns(List.of(
-        "https://*.amplifyapp.com",
-        "https://*.cloudfront.net",
-        "http://localhost:*"
-    ));
+        config.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE","PATCH","OPTIONS"));
+        config.setAllowedHeaders(Arrays.asList("*"));
+        config.setAllowCredentials(true); // will echo the Origin (not *)
 
-    cfg.setAllowedMethods(List.of("GET","POST","PUT","PATCH","DELETE","OPTIONS"));
-    cfg.setAllowedHeaders(List.of("*"));
-    cfg.setAllowCredentials(true);                // OK even with patterns
-    cfg.setExposedHeaders(List.of("Location"));   // optional
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", config);
 
-    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-    source.registerCorsConfiguration("/**", cfg);
-    return source;
-  }
+        return new CorsFilter(source);
+    }
 }
